@@ -5,6 +5,7 @@ v1.0.16
 # Fixed: Default textarea height for contact form 7(https://wordpress.org/plugins/contact-form-7/) removed.
 # Improvement: Colors & Backgrounds for body renamed as Base Colors.
 # Improvement: Colors & Backgrounds - Theme Color / Link Color place at the first position.
+# Removed: Unwanted functions from template-tags.php.
 
 v1.0.15
 # New: Font family, font weight and text transform options implemented for Headings.
